double emit for sidebar in main page

--- a/client/src/app/components/calendar/calendar.component.html
+++ b/client/src/app/components/calendar/calendar.component.html
@@ -24,4 +24,4 @@
     </ng-container>
   </div>
 </body>
-<app-sidebar [subMenuState]="subMenuState"></app-sidebar>
+<!-- <app-sidebar [subMenuState]="subMenuState"></app-sidebar> -->
