--- a/client/src/app/components/main-page/main-page.component.css
+++ b/client/src/app/components/main-page/main-page.component.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background-image: url("https://www.circulaire-en-ligne.ca//wp-content/uploads/lasagnes-a-la-bolognaise-facile.jpg");
+  background-image: url("https://i.ytimg.com/vi/-m2u1t8x-aE/maxresdefault.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
