--- a/client/src/app/components/receipe-dialog/receipe-dialog.component.html
+++ b/client/src/app/components/receipe-dialog/receipe-dialog.component.html
@@ -5,15 +5,12 @@
 	</aside>
 
 	<article>
-
 		<h2>{{meal}}</h2>
 		<h3>{{type}}</h3>
-       <!--<h4>Steps</h4>--> 
 
-		<p>For an extra thick and creamy bowl, add oat bran.  It'll make for a hearty helping and also add more fiber to your meal.  If you love the taste of chai, you'll enjoy this spiced version with coriander, cinnamon, and turmeric.</p>
-
-		<p class="ingredients"><span>Ingredients:&nbsp;</span>Milk, salt, coriander, cardamom, cinnamon, turmeric, honey, vanilla extract, regular oats, oat bran.</p>
-
+		<p id="recipeTag"></p>
+		<a id="linkA">Link to recipe</a>
+		<p id> {{ingredients}}</p>
 	</article>
 
 </div>
